fix body height < 100% bug on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -278,7 +278,6 @@ section:after {
 }
 
 footer {
-	position: absolute;
 	bottom: 0;
 	margin-left: auto;
 	margin-right: auto;
